# uav_photogrammetry_toolkit

./: .gitignore  README.md  config.ini  process_video.py
ExifImages/Ardrone2/: create_exif.py
blur_detection/: auto_canny.py  blur_detect.py  dft_inspect.py
estimateTime/: estimateGlobalMatches.py
exif_images/: exif_tags.txt  template_exif.txt
exif_images/ardroneV2/: details.txt
feature_detection/: sift.py
feature_detection/SIFT/: backup  convert_vlsift_to_lowesift.pl  sift.py
feature_detection/SIFT/A_Opp_DoB_H_SIFT/: CMakeLists.txt
feature_detection/SIFT/A_Opp_DoB_H_SIFT/include/: ASIFT.h  fast_bilateral_filter.hpp  my_sift.h  rootSIFT.hpp  sift.h
feature_detection/SIFT/A_Opp_DoB_H_SIFT/src/: ASIFT.cpp  main.cpp  my_sift.cpp  rootsift.cpp  sift.cpp  vsfm_sift.cpp
haze_detection/: haze_detection.py
haze_removal/: dehaze.py  main
haze_removal/GuidedFilter/: CMakeLists.txt
image_enhancement/: CMakeLists.txt  npr_demo.cpp
image_enhancement/HSV_enhancement/: CMakeLists.txt  main.cpp
output_dir/Exif/: 0.mat  0.sift  1020.mat  1080.mat  1080.sift  1140.mat  1140.sift  120.mat  120.sift  1200.mat  1260.mat  1260.sift  1320.mat  1380.mat  1380.sift  1440.mat  1500.mat  1500.sift  1560.mat  1620.mat  1680.mat  1680.sift  1740.mat  1740.sift  180.mat  1800.mat  1860.mat  1860.sift  1920.mat  1920.sift  1980.mat  2040.mat  2100.mat  2100.sift  2160.mat  2220.mat  2280.mat  2280.sift  2340.mat  240.mat  (+162 more)
stabilization/: cpp-example-videostab  stabilize.py  stabilize_live  stabilize_static
undistort/: undistort.py  undistort2.py
(+2563 files in other folders)
